90_lab/60_wordpress/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  selector:
      matchLabels:
        app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        service: db
    spec:
      containers:
        - name: mysql-container
          image: mysql:5.6
          ports:
            - containerPort: 3306
              name: mysql-port
